integration Cashier and Dashboard

--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.1",
     "axios": "^0.27.2",
+    "chart.js": "^4.3.0",
+    "compute-scroll-into-view": "^3.0.3",
+    "framer-motion": "^10.12.14",
     "mdb-ui-kit": "^4.2.0",
     "mdbreact": "^5.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.1",
     "react-router-dom": "^6.3.0",
