--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.12.14",
     "mdb-ui-kit": "^4.2.0",
     "mdbreact": "^5.2.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^5.2.0",
@@ -25,6 +26,7 @@
     "react-dropzone": "^14.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
