--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "vue-csv-import": "^3.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
