--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mdb-ui-kit": "^4.2.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^5.2.0",
